Separated files - roughly by function. Added basic test-script file

--- a/gauss_elim_naive2-Copy0.ipynb
+++ b/gauss_elim_naive2-Copy0.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "signature": "sha256:9aea2540c8c78f7d4ae247e2ed18b2ffac180156f0d30cad2d1404b100c7610a"
+  "signature": "sha256:0b1d48ad9d98b45c6015f598950b0a454c85eb68db036aa4038b084e955ce72f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -54,7 +54,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 61
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -161,7 +161,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -196,7 +196,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 25
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -236,7 +236,6 @@
       "            j = findPivotrow1(N,col)\n",
       "        elif type == 2:\n",
       "            j = findPartialPivotRow(N,col)\n",
-      "           \n",
       "            if debugging:\n",
       "                print(\"pivot val = \", N[col][j])\n",
       "        elif type == 3:\n",
@@ -293,8 +292,9 @@
       "    else:\n",
       "        return(True)\n",
       "\n",
+      "''' modified: added type '''\n",
       "\n",
-      "def ge_1(aug, type):\n",
+      "def ge_1(aug, pivot_type):\n",
       "\n",
       "#   Given an augmented matrix it returns a list.  The [0]\n",
       "#   element is the row-reduced augmented matrix, and\n",
@@ -305,9 +305,9 @@
       "    ''' \n",
       "    If scaled pivoting get row scalings\n",
       "    '''\n",
-      "    if type == scaled_pivot:\n",
+      "    if pivot_type == scaled_pivot:\n",
       "        row_maxes = findRowScalings(aug)\n",
-      "    aug_n = rowReduce(aug, type, row_maxes)\n",
+      "    aug_n = rowReduce(aug, pivot_type, row_maxes)\n",
       "    if diag_test(aug_n):\n",
       "        sol = backSub(aug_n)\n",
       "    else:\n",
@@ -319,7 +319,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 320
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
@@ -360,7 +360,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 199
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -368,7 +368,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -458,7 +459,7 @@
        ]
       }
      ],
-     "prompt_number": 325
+     "prompt_number": 24
     },
     {
      "cell_type": "code",
@@ -616,7 +617,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 318
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -631,26 +632,14 @@
       "     [1,1,10**(-3),10**(-3),2],\n",
       "     [1,1,1, 10**(-3),3]]\n",
       "\n",
-      "AandB = ge_1(A,3)\n",
+      "AandB = ge_1(A,scaled)\n",
       "\n",
       "#----- checkSol returns List = Ax, b, r\n",
       "checkSol_1(A, AandB[1])\n"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 29,
-       "text": [
-        "[[[1e+17], [0.005004004004004005], [2.0050040040040042], [4.005004004004005]],\n",
-        " [100000000000000000, 1, 2, 3],\n",
-        " [0.0, 0.994995995995996, -0.005004004004004248, -1.0050040040040047]]"
-       ]
-      }
-     ],
-     "prompt_number": 29
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -676,11 +665,11 @@
       "A\n",
       "B = [[1,3,-4,6],[1,-2,4,3],[4,-5,3,2]]\n",
       "B\n",
-      "x = ge_1(B,2)\n",
-      "results = checkSol_1(B,x[1])\n",
+      "res = ge_1(B,2)\n",
+      "\n",
+      "results = checkSol_1(B,res[1])\n",
       "results[2]\n",
-      "print \"hi\"\n",
-      "len(A)"
+      "res[0]"
      ],
      "language": "python",
      "metadata": {},
@@ -689,19 +678,26 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "hi\n"
+        "('max_val', 4)\n",
+        "('pivot val = ', 1)\n",
+        "('max_val', 17.0)\n",
+        "('pivot val = ', -5.0)\n",
+        "('max_val', 8.200000000000003)\n",
+        "('pivot val = ', -8.200000000000003)\n"
        ]
       },
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 34,
+       "prompt_number": 23,
        "text": [
-        "4"
+        "[[1, 3, -4, 6],\n",
+        " [0.0, -5.0, 8.0, -3.0],\n",
+        " [0.0, 0.0, -8.200000000000003, -11.799999999999999]]"
        ]
       }
      ],
-     "prompt_number": 34
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
@@ -713,8 +709,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 326
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -722,8 +717,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 325
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -731,8 +725,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 325
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -743,8 +736,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 326
+     "outputs": []
     }
    ],
    "metadata": {}
